# RKEmemory

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  RESEARCH.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: rke.yaml.example  sources.yaml.example
docs/diagrams/: rke-architecture.html  rke-query-flow.html
scripts/: bench_search_backends.py  benchmark.py  e2e_smoke.py  eval_dmr.py  eval_locomo.py  eval_longmemeval.py  feature_test.py  integration_v02.py  setup.sh  start-services.sh
src/rke/: __init__.py  __main__.py  agent_integration.py  cli.py  config.py  graph_store.py  graph_temporal.py  vector_store.py
src/rke/adapters/: __init__.py  chat_memory.py
src/rke/ingestion/: __init__.py  drive.py  git_repos.py  knowledge.py
src/rke/knowledge/: __init__.py  extractor.py
src/rke/rlm/: __init__.py  environment.py  router.py
src/rke/wiki/: __init__.py  knowledge_base.py  lifecycle.py  manager.py  search_index.py  tantivy_index.py
tests/: test_chat_memory.py  test_chunking.py  test_config.py  test_extractor.py  test_graph_temporal.py  test_lifecycle.py  test_search_index.py  test_tantivy_index.py  test_wiki.py
